/*
 * Copyright Â© 2020-2021 by Academia Sinica
 *
 * This file is part of SKISSM.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SKISSM is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SKISSM.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "E2eeInvitePayload";

message e2ee_invite_payload {
    uint32 cipher_suite_id = 1;
    bytes alice_identity_key = 2;
    repeated bytes pre_shared_key = 3;
    uint32 bob_signed_pre_key_id = 4;
    uint32 bob_one_time_pre_key_id = 5;
}
